@@ -5,9 +5,12 @@ import team1.testprocessing.Models.DataModel;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CollectionsFormatter {
+
+    private CollectionsFormatter(){
+
+    }
 
     public static List<DataModel> filterByKeyword(List<DataModel> items, String keyword) {
         if (items == null || keyword == null || keyword.isEmpty()) {
@@ -15,7 +18,7 @@ public class CollectionsFormatter {
         }
         return items.stream()
                 .filter(item -> item.getName().contains(keyword) || item.getValue().contains(keyword))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -25,7 +28,7 @@ public class CollectionsFormatter {
         }
         return items.stream()
                 .sorted(ascending ? Comparator.comparing(DataModel::getName) : Comparator.comparing(DataModel::getName).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
